building accordion in about me section

--- a/Assets/index.html
+++ b/Assets/index.html
@@ -13,79 +13,133 @@
 
 <body>
     <section class="hero">
-    <header>
-        <img class="logo" src="./images/logo.jpg" alt="logo">
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>My Work</li>
-                <li>Contact Me</li>
-            </ul>
-        </nav>
-    </header>
+        <header>
+            <img class="logo" src="./images/logo.jpg" alt="logo">
+            <nav>
+                <ul>
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>My Work</li>
+                    <li>Contact Me</li>
+                </ul>
+            </nav>
+        </header>
 
-    <main>
-        <div class="">
-            <h1>Hello,<br> I am Qais Al Balkhi</h1>
-            <button>Download CV</button>
-        </div>
-    </main>
-</section>
+        <main>
+            <div class="hello">
+                <h3>I am <h1>Qais Al Balkhi</h1>
+                </h3>
+                <h4>a Software Developer</h4>
+                <button>Download CV</button>
+            </div>
+        </main>
+    </section>
 
     <section class="about">
-        <img src="https://via.placeholder.com/200/" alt="another portrait image of Qais">
+        <div class="accordion">
+            <div class="contentBx">
+                <div class="label">Skills</div>
+                <div class="content">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean leo velit, pulvinar sit amet
+                        iaculis
+                        in,
+                        faucibus lobortis felis.
+                        Morbi non consequat arcu,
+                        eu venenatis ipsum.
+                    </p>
+                </div>
+            </div>
 
-        <section>
-            About Me <br>
 
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean leo velit, pulvinar sit amet iaculis in,
-            faucibus lobortis felis. Morbi non consequat arcu, eu venenatis ipsum.
+            <div class="contentBx">
+                <div class="label">Education</div>
+                <div class="content">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean leo velit, pulvinar sit amet
+                        iaculis
+                        in,
+                        faucibus lobortis felis.
+                        Morbi non consequat arcu,
+                        eu venenatis ipsum.
+                    </p>
+                </div>
+            </div>
+
+            <div class="contentBx">
+                <div class="label">Experience</div>
+                <div class="content">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean leo velit, pulvinar sit amet
+                        iaculis
+                        in,
+                        faucibus lobortis felis.
+                        Morbi non consequat arcu,
+                        eu venenatis ipsum.
+                    </p>
+                </div>
+            </div>
+
+
+            <h2>About Me</h2> <br>
 
             <ul>
                 <li>Skills</li>
+                <p class="hide">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean leo velit, pulvinar sit amet iaculis
+                    in,
+                    faucibus lobortis felis. Morbi non consequat arcu, eu venenatis ipsum.
+                </p>
                 <li>Experience</li>
+                <p class="hide">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean leo velit, pulvinar sit amet iaculis
+                    in,
+                    faucibus lobortis felis. Morbi non consequat arcu, eu venenatis ipsum.
+                </p>
                 <li>Education</li>
+                <p class="hide">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean leo velit, pulvinar sit amet iaculis
+                    in,
+                    faucibus lobortis felis. Morbi non consequat arcu, eu venenatis ipsum.
+                </p>
             </ul>
-        </section>
+        </div>
     </section>
+ 
 
     <section class="work">
-                <div class="card">
-                    <h2>Project 1</h2>
-                    <img src="https://via.placeholder.com/200/" alt="">
+        <div class="card">
+            <h2>Project 1</h2>
+            <img src="https://via.placeholder.com/200/" alt="">
 
-                </div>
+        </div>
 
-                <div class="card">
-                    <h2>Project 2</h2>
-                    <img src="https://via.placeholder.com/200/" alt="">
+        <div class="card">
+            <h2>Project 2</h2>
+            <img src="https://via.placeholder.com/200/" alt="">
 
-                </div>
+        </div>
 
-                <div class="card">
-                    <h2>Project 3</h2>
-                    <img src="https://via.placeholder.com/200/" alt="">
+        <div class="card">
+            <h2>Project 3</h2>
+            <img src="https://via.placeholder.com/200/" alt="">
 
-                </div>
+        </div>
 
-                <div class="card">
-                    <h2>Project 4</h2>
-                    <img src="https://via.placeholder.com/200/" alt="">
+        <div class="card">
+            <h2>Project 4</h2>
+            <img src="https://via.placeholder.com/200/" alt="">
 
-                </div>
+        </div>
 
-                <div class="card">
-                    <h2>Project 5</h2>
-                    <img src="https://via.placeholder.com/200/" alt="">
+        <div class="card">
+            <h2>Project 5</h2>
+            <img src="https://via.placeholder.com/200/" alt="">
 
-                </div>
+        </div>
 
-                <div class="card">
-                    <h2>Project 6</h2>
-                    <img src="https://via.placeholder.com/200/" alt="">
+        <div class="card">
+            <h2>Project 6</h2>
+            <img src="https://via.placeholder.com/200/" alt="">
 
-                </div>
+        </div>
     </section>
 
     <section class="contact">
