--- a/Assets/index.html
+++ b/Assets/index.html
@@ -12,15 +12,15 @@
 
 
 <body>
-    <section class="hero">
+    <section id="hero">
         <header>
             <img class="logo" src="./images/logo.jpg" alt="logo">
             <nav>
                 <ul>
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>My Work</li>
-                    <li>Contact Me</li>
+                    <a href="#hero"><li>Home</li></a>
+                    <a href="#about"><li>About</li></a>
+                    <a href="#work"><li>My Work</li></a>
+                    <a href="#contact"><li>Contact Me</li></a>
                 </ul>
             </nav>
         </header>
@@ -30,12 +30,13 @@
                 <h3>I am <h1>Qais Al Balkhi</h1>
                 </h3>
                 <h4>a Software Developer</h4>
-                <button>Download CV</button>
+                <button> <a href="https://drive.google.com/file/d/1QX1oVG6NSFqxwH3BbmIWkt5649-GCIIK/view">Download CV</a></button>
             </div>
         </main>
     </section>
 
-    <section class="about">
+    <section id="about">
+        <h2>About Me </h2>
         <div class="accordion">
             <div class="contentBx">
                 <div class="label">Skills</div>
@@ -76,89 +77,77 @@
                     </p>
                 </div>
             </div>
+            <script>
+                const accordion = document.getElementsByClassName
+                    ('contentBx');
 
-
-            <h2>About Me</h2> <br>
-
-            <ul>
-                <li>Skills</li>
-                <p class="hide">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean leo velit, pulvinar sit amet iaculis
-                    in,
-                    faucibus lobortis felis. Morbi non consequat arcu, eu venenatis ipsum.
-                </p>
-                <li>Experience</li>
-                <p class="hide">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean leo velit, pulvinar sit amet iaculis
-                    in,
-                    faucibus lobortis felis. Morbi non consequat arcu, eu venenatis ipsum.
-                </p>
-                <li>Education</li>
-                <p class="hide">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean leo velit, pulvinar sit amet iaculis
-                    in,
-                    faucibus lobortis felis. Morbi non consequat arcu, eu venenatis ipsum.
-                </p>
-            </ul>
-        </div>
-    </section>
- 
-
-    <section class="work">
-        <div class="card">
-            <h2>Project 1</h2>
-            <img src="https://via.placeholder.com/200/" alt="">
-
-        </div>
-
-        <div class="card">
-            <h2>Project 2</h2>
-            <img src="https://via.placeholder.com/200/" alt="">
-
-        </div>
-
-        <div class="card">
-            <h2>Project 3</h2>
-            <img src="https://via.placeholder.com/200/" alt="">
-
-        </div>
-
-        <div class="card">
-            <h2>Project 4</h2>
-            <img src="https://via.placeholder.com/200/" alt="">
-
-        </div>
-
-        <div class="card">
-            <h2>Project 5</h2>
-            <img src="https://via.placeholder.com/200/" alt="">
-
-        </div>
-
-        <div class="card">
-            <h2>Project 6</h2>
-            <img src="https://via.placeholder.com/200/" alt="">
-
+                for (i = 0; i < accordion.length; i++) {
+                    accordion[i].addEventListener('click', function () {
+                        this.classList.toggle('active')
+                    })
+                }
+            </script>
         </div>
     </section>
 
-    <section class="contact">
+
+
+    <section id="work">
+        <div class="container">
+            <div class="card">
+                <img src="./images/pass-screenshot.jpg" alt="Cheetah">
+                <div class="intro">
+                    <h1>Pass Generator</h1>
+                    <p>This application prompts the user and generates a password accoirding to their specifications</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="card">
+                <img src="./images/quiz-screenshot.jpg" alt="">
+                <div class="intro">
+                    <h1>Javascript Quiz</h1>
+                    <p>This Quiz tests the user on common JS knowledge. There is a timer and when the user is done they
+                        enter their initial and a highscore is given based on the time remaining and correct answers.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="card">
+                <img src="./images/weather-screenshot.jpg" alt="">
+                <div class="intro">
+                    <h1>Weather API</h1>
+                    <p>This Weather API gives weather accurate live weather stats about the city entered</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section id="contact">
         <h3>Email: <a href="mailto:qaiscyberlife@gmail.com">qaiscyberlife@gmail.com</a></h3>
         <h3>Phone: <a href="tel:(647) 573-7015">(647) 573-7015</a></h3>
 
         <section class="socials">
 
-            <img src="https://via.placeholder.com/50/" alt="instagram icon">
+            <a href="https://mobile.twitter.com/QaisAlbalkhi">
+                <img src="./images/twitter.png" alt="twitter icon">
+            </a>
 
+            <a href="https://github.com/qais-cyberlife">
+                <img src="./images/github.png" alt="github icon">
+            </a>
 
-            <img src="https://via.placeholder.com/50/" alt="github icon">
+            <a href="https://ca.linkedin.com/in/kais-al-balkhi-481597235">
+                <img src="./images/linkedin.png" alt="linkedin icon">
+            </a>
 
-
-            <img src="https://via.placeholder.com/50/" alt="linkedin icon">
-
-
-
-            <img src="https://via.placeholder.com/50/" alt="youtube icon">
+            <a href="https://www.youtube.com/@qaisalbalkhi6184/featured">
+                <img src="./images/youtube.png" alt="youtube icon">
+            </a>
 
         </section>
     </section>
