reformated the document to fix bugs, the index file was moved and style sheet disconnected

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./Assets/css/reset.css">
+    <link rel="stylesheet" href="./Assets/css/styles.css">
     <title>Portofolio</title>
 </head>
 
@@ -14,7 +14,7 @@
 <body>
     <section id="hero">
         <header>
-            <img class="logo" src="./images/logo.jpg" alt="logo">
+            <img class="logo" src="./Assets/images/logo.jpg" alt="logo">
             <nav>
                 <ul>
                     <a href="#hero"><li>Home</li></a>
@@ -95,7 +95,7 @@
     <section id="work">
         <div class="container">
             <div class="card">
-                <img src="./images/pass-screenshot.jpg" alt="Cheetah">
+                <img src="./Assets/images/pass-screenshot.jpg" alt="Cheetah">
                 <div class="intro">
                     <h1>Pass Generator</h1>
                     <p>This application prompts the user and generates a password accoirding to their specifications</p>
@@ -105,7 +105,7 @@
 
         <div class="container">
             <div class="card">
-                <img src="./images/quiz-screenshot.jpg" alt="">
+                <img src="./Assets/images/quiz-screenshot.jpg" alt="">
                 <div class="intro">
                     <h1>Javascript Quiz</h1>
                     <p>This Quiz tests the user on common JS knowledge. There is a timer and when the user is done they
@@ -117,7 +117,7 @@
 
         <div class="container">
             <div class="card">
-                <img src="./images/weather-screenshot.jpg" alt="">
+                <img src="./Assets/images/weather-screenshot.jpg" alt="">
                 <div class="intro">
                     <h1>Weather API</h1>
                     <p>This Weather API gives weather accurate live weather stats about the city entered</p>
@@ -134,19 +134,19 @@
         <section class="socials">
 
             <a href="https://mobile.twitter.com/QaisAlbalkhi">
-                <img src="./images/twitter.png" alt="twitter icon">
+                <img src="./Assets/images/twitter.png" alt="twitter icon">
             </a>
 
             <a href="https://github.com/qais-cyberlife">
-                <img src="./images/github.png" alt="github icon">
+                <img src="./Assets/images/github.png" alt="github icon">
             </a>
 
             <a href="https://ca.linkedin.com/in/kais-al-balkhi-481597235">
-                <img src="./images/linkedin.png" alt="linkedin icon">
+                <img src="./Assets/images/linkedin.png" alt="linkedin icon">
             </a>
 
             <a href="https://www.youtube.com/@qaisalbalkhi6184/featured">
-                <img src="./images/youtube.png" alt="youtube icon">
+                <img src="./Assets/images/youtube.png" alt="youtube icon">
             </a>
 
         </section>
